More words and some optimizations

--- a/src/app/bingo/game-stats/game-stats.component.html
+++ b/src/app/bingo/game-stats/game-stats.component.html
@@ -2,20 +2,12 @@
 
 <ul class="list-group">
   <li class="list-group-item d-flex justify-content-between">
-    <span>Total possibilities</span>
-    <span>{{gameStats.possible}}</span>
+    <span>Found words</span>
+    <span>{{gameStats.foundWords}}</span>
   </li>
   <li class="list-group-item d-flex justify-content-between">
     <span>Bingo</span>
-    <span>{{gameStats.total}}</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between">
-    <span>Complete</span>
-    <span>{{gameStats.complete?'Complete':'Not all found'}}</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between">
-    <span>Found words</span>
-    <span>{{gameStats.foundWords}}</span>
+    <span>{{gameStats.total}} / {{gameStats.possible}}</span>
   </li>
   <li class="list-group-item d-flex justify-content-between">
     <span>Horizontal</span>
@@ -28,6 +20,10 @@
   <li class="list-group-item d-flex justify-content-between">
     <span>Diagonal</span>
     <span>{{gameStats.diagonal}}</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between">
+    <span>Complete</span>
+    <span>{{gameStats.complete?'Complete':'Not all found'}}</span>
   </li>
 
 </ul>
