--- a/src/app/bingo/new-game/new-game.component.html
+++ b/src/app/bingo/new-game/new-game.component.html
@@ -34,7 +34,7 @@
 
       </div>
 
-      <button class="btn btn-primary" type="submit">Create game</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!isValid()">Create game</button>
 
     </form>
 
